# CoastalOasis

./: CMakeLists.txt  main.cpp
DataBase/: Read.cpp  Read.h  Write.cpp  Write.h
DataBase/Data/: Employees.txt  Users.txt
Frames/: ClientDashBoard.cpp  ClientDashBoard.h  EmployeeDashBoard.cpp  EmployeeDashBoard.h  FrameSwitcher.cpp  FrameSwitcher.h  Home.cpp  Home.h  Login.cpp  Login.h  UserDashBoard.cpp  UserDashBoard.h
Frames/myPanels/: ActivitiesPanel.cpp  ActivitiesPanel.h  BookDiningPanel.cpp  BookDiningPanel.h  ReservationsPanel.cpp  ReservationsPanel.h  RoomInfoPanel.cpp  RoomInfoPanel.h  SettingsPanel.cpp  SettingsPanel.h  myPanel.cpp  myPanel.h
HotelClasses/: Hotel.cpp  Hotel.h
HotelClasses/Bookings/: Booking.cpp  Booking.h  Payment.cpp  Payment.h  Recipe.cpp  Recipe.h
HotelClasses/Clients/: person.cpp  person.h
HotelClasses/Clients/Internal/: Contractor.cpp  Contractor.h  Hourly.cpp  Hourly.h  Intern.cpp  Intern.h  Manager.cpp  Manager.h  employee.cpp  employee.h
HotelClasses/GlobalUtils/: HTime.cpp  HTime.h  HotelEnums.h  Utilities.cpp  Utilities.h
HotelClasses/GlobalsAndNecessities/: GlobalFunctions.h  HotelEnums.h
HotelClasses/Rooms/: DoubleRoom.cpp  DoubleRoom.h  Room.cpp  Room.h  SingleRoom.cpp  SingleRoom.h  Suite.cpp  Suite.h
HotelClasses/Schedule/: WeeklySchedule.cpp  WeeklySchedule.h  employee_scheduleitem.cpp  employee_scheduleitem.h  facility_scheduleitem.cpp  facility_scheduleitem.h  room_scheduleitem.cpp  room_scheduleitem.h  scheduleitem.cpp  scheduleitem.h
